--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
 title: The Lost Memories of Artemis
 description: A collection of mysterious tales from the brotherhood of the sigil
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 markdown: kramdown
+baseurl: ""
+permalink: /stories/:title/
