--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 title: The Lost Memories of Artemis
 description: A collection of mysterious tales from the brotherhood of the sigil
+theme: jekyll-theme-hacker
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-markdown: kramdown
+- jekyll-remote-theme
+- jekyll-feed
 baseurl: ""
 permalink: /stories/:title/
+markdown: kramdown
