--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: The Lost Memories of Artemis
 description: A collection of mysterious tales from the brotherhood of the sigil
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: benbalter/retlab
 plugins:
-- jekyll-remote-theme
-- jekyll-feed
+  - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-sitemap
 baseurl: ""
 permalink: /stories/:title/
 markdown: kramdown
