--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ description: A collection of mysterious tales from the brotherhood of the sigil
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
-baseurl: "dnd_01"
+baseurl: "/dnd_01"
 permalink: /stories/:title/
 show_downloads: false
